<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tagtechnologies.muhammadsufwan.vorsonairconditioningservice.clients.PaymentListActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarClientInvoiceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_blue_header"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarClientInvoiceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/goBackClientInvoiceList"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="@dimen/space_ten"
                android:src="@drawable/ic_go_back_left_arrow"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/app_name"/>

            <ImageView
                android:id="@+id/toolbarLogoClientInvoiceList"
                android:layout_width="200dp"
                android:layout_height="@dimen/space_fifty"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/holygrailz_uk_profile_ui" />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/boardHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/appbarClientInvoiceList"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textClientNamePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_five"
            android:gravity="center"
            android:paddingBottom="@dimen/space_ten"
            android:textColor="@color/color_white"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textClientNamePayment"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/paidAmountTotalList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:ems="3"
                    android:gravity="center"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/total_invoices"
                    android:textColor="@color/color_white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalPaidInvoiceList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/color_white"
                    android:textSize="25sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/paidAmountHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:ems="3"
                    android:gravity="center"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/total_amount"
                    android:textColor="@color/color_white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalAmountPaidInvoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/color_white"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/listHeader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/boardHeaderLayout"
        android:background="@color/indicator_unselected"
        android:gravity="center"
        android:weightSum="100">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="19"
            android:ellipsize="end"
            android:ems="1"
            android:gravity="center"
            android:paddingBottom="@dimen/space_five"
            android:paddingEnd="@dimen/space_ten"
            android:paddingStart="@dimen/space_ten"
            android:paddingTop="@dimen/space_five"
            android:text="@string/invoiceNo"
            android:textColor="@color/color_black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showItemQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20.33"
            android:gravity="center"
            android:paddingBottom="@dimen/space_five"
            android:paddingTop="@dimen/space_five"
            android:text="@string/date"
            android:textColor="@color/color_black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20.33"
            android:gravity="center"
            android:paddingBottom="@dimen/space_five"
            android:paddingTop="@dimen/space_five"
            android:text="@string/subtotal"
            android:textColor="@color/color_black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20.33"
            android:gravity="center"
            android:paddingBottom="@dimen/space_five"
            android:paddingTop="@dimen/space_five"
            android:text="@string/tax"
            android:textColor="@color/color_black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20.33"
            android:gravity="center"
            android:paddingBottom="@dimen/space_five"
            android:paddingTop="@dimen/space_five"
            android:text="@string/total"
            android:textColor="@color/color_black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/listHeader"
        android:orientation="vertical">


        <!--<android.support.v7.widget.RecyclerView-->

        <!--android:id="@+id/serviceInvoiceList"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="#3c2a7bfc">-->

        <!--</android.support.v7.widget.RecyclerView>-->


        <TextView
            android:id="@+id/paymentNotFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_invoices_found"
            android:textSize="@dimen/space_thirty"
            android:visibility="gone" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/serviceInvoiceList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarInvoiceActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:secondaryProgressTint="@color/white"
        android:visibility="gone" />

</RelativeLayout>
