<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_ten"
    android:background="@drawable/gradient_blue"
    tools:context=".technician.fragments.ShowSubmitJob">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="@dimen/space_ten"
            app:cardElevation="@dimen/space_ten">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_five">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageVorson"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="@dimen/space_ten"
                        android:layout_marginStart="@dimen/space_ten"
                        android:layout_marginTop="@dimen/space_ten"
                        android:contentDescription="@string/vorson_logo_description"
                        android:src="@drawable/holygrailz_uk_profile_ui" />

                    <TextView
                        android:id="@+id/textaddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageVorson"
                        android:paddingEnd="@dimen/space_ten"
                        android:paddingStart="@dimen/space_fourty"
                        android:text="@string/vorson_address"
                        android:textColor="@color/color_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/vorsonCell"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textaddress"
                        android:layout_marginTop="@dimen/space_five"
                        android:paddingEnd="@dimen/space_ten"
                        android:paddingStart="@dimen/space_fourty"
                        android:text="@string/vorson_cell"
                        android:textColor="@color/color_black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/vorsonEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/vorsonCell"
                        android:layout_marginBottom="@dimen/space_five"
                        android:layout_marginTop="@dimen/space_five"
                        android:paddingEnd="@dimen/space_ten"
                        android:paddingStart="@dimen/space_fourty"
                        android:text="@string/vorson_email"
                        android:textColor="@color/color_black"
                        android:textSize="15sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_ten"
                    android:layout_marginTop="@dimen/space_ten"
                    android:gravity="center"
                    android:text="@string/scope_of_service"
                    android:textColor="@color/color_black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Client Name/Id"
                    android:textColor="@color/color_black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/showSubmitJob_clientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_ten"
                    android:textColor="@color/color_black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_ten"
                    android:orientation="horizontal"
                    android:weightSum="120">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/time_in"
                        android:textColor="@color/color_black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/block_text_background"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/time_out"
                        android:textColor="@color/color_black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/block_text_background"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/distance"
                        android:textColor="@color/color_black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/block_text_background"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="120">

                    <TextView
                        android:background="@drawable/block_text_background"
                        android:id="@+id/showSubmitJob_timeIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textColor="@color/color_black"
                        android:textSize="20sp" />

                    <TextView
                        android:background="@drawable/block_text_background"
                        android:id="@+id/showSubmitJob_timeOut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textColor="@color/color_black"
                        android:textSize="20sp" />

                    <TextView
                        android:background="@drawable/block_text_background"
                        android:id="@+id/showSubmitJob_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="40"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textColor="@color/color_black"
                        android:textSize="20sp" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/showSubmitJob_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_ten"
                    >

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>